--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_PROJECTID=project-91a3d
 REACT_APP_STORAGEBUCKET=project-91a3d.appspot.com
 REACT_APP_MESSAGINGSENDERID=181029859742
 REACT_APP_APID=1:181029859742:web:26c30a29627b670e7d668f
+REACT_APP_RAZORPAYKEY=rzp_live_n4LsXlPJaWpQ73
