--- a/.env
+++ b/.env
@@ -1,8 +1,1 @@
-REACT_APP_APIKEY=AIzaSyBUl3SS0jAwIUzbuGufWF1PwJknxzeGPjY
-REACT_APP_AUTHDOMAIN=project-91a3d.firebaseapp.com
-REACT_APP_DATABASEURL=https://project-91a3d-default-rtdb.firebaseio.com
-REACT_APP_PROJECTID=project-91a3d
-REACT_APP_STORAGEBUCKET=project-91a3d.appspot.com
-REACT_APP_MESSAGINGSENDERID=181029859742
-REACT_APP_APID=1:181029859742:web:26c30a29627b670e7d668f
-REACT_APP_RAZORPAYKEY=rzp_live_n4LsXlPJaWpQ73
+Firebase config
